--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@lumino/signaling": "^1.3.5",
     "@lumino/widgets": "^1.11.1",
     "@types/codemirror": "^0.0.96",
+    "queue-typescript": "^1.0.1",
     "tde-csvviewer": "1.0.0"
   },
   "devDependencies": {
@@ -75,6 +76,8 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts}": ["eslint --cache --fix"]
+    "*.{js,ts}": [
+      "eslint --cache --fix"
+    ]
   }
 }
